home page alignment fix

--- a/src/app/pages/manager-section/my-profile/my-profile.page.scss
+++ b/src/app/pages/manager-section/my-profile/my-profile.page.scss
@@ -55,3 +55,6 @@ ion-content{
     left: 43%;
     color: rgba(0, 123, 255, 0.5);
 }
+ion-col{
+  text-align: center;
+}
